--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "inclusive-soundtrack",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "22e4da1f",
    "metadata": {},
@@ -406,9 +414,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rag_dataloaders",
+   "display_name": "rag_dataloaders_new",
    "language": "python",
-   "name": "rag_dataloaders"
+   "name": "rag_dataloaders_new"
   },
   "language_info": {
    "codemirror_mode": {
