testing notebook run

--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -23,11 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "inclusive-soundtrack",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pymupdf in /fs01/home/ws_cduffy/forked_repo/rag_bootcamp/envs/rag_dataloaders/rag_dataloaders_new/lib/python3.10/site-packages (1.24.0)\n",
+      "Requirement already satisfied: PyMuPDFb==1.24.0 in /fs01/home/ws_cduffy/forked_repo/rag_bootcamp/envs/rag_dataloaders/rag_dataloaders_new/lib/python3.10/site-packages (from pymupdf) (1.24.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pymupdf"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2f637730",
    "metadata": {},
    "outputs": [],
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dd4e2417",
    "metadata": {},
    "outputs": [],
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "74b61e4f",
    "metadata": {},
    "outputs": [],
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6133a928",
    "metadata": {},
    "outputs": [],
@@ -143,41 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "00061d61",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: \n",
-      "\n",
-      " Vector Institute's scholarships and awards vary each year, and their AI scholarships are no exception. Through their various scholarships, they've awarded over $1 million to exceptional students in both undergraduate and graduate programs at their partner universities. \n",
-      "\n",
-      "In 2022, Vector awarded the following scholarships in Artificial Intelligence:\n",
-      "\n",
-      "- Vector AI Graduate Student Scholarship - 6 awards \n",
-      "- Vector AI Undergraduate Student Scholarship - 6 awards \n",
-      "- Vector Professor Fellowship in AI - 2 awards \n",
-      "\n",
-      "These scholarships are awarded based on academic excellence, impact on the community, and demonstrated interest in AI-related research. \n",
-      "\n",
-      "Recipients of these scholarships are given the opportunity to collaborate with top researchers in the field, develop cutting-edge AI technologies, and contribute to Vector's various research centers, including the fields of:\n",
-      "\n",
-      "- Biomedical AI\n",
-      "- Health Analytics\n",
-      "- Machine Learning\n",
-      "- Natural Language Processing\n",
-      "- Reinforcement Learning\n",
-      "- Robotic Learning \n",
-      "\n",
-      "These scholarships help to foster the next generation of AI researchers and practitioners, and play a key role in shaping the future of AI-augmented society. \n",
-      "\n",
-      "If you're interested in learning more about these scholarships and how to apply, I recommend visiting Vector Institute's website, where you can find further details on each scholarship's criteria, application process, and deadlines. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm = Cohere(api_key=os.environ[\"COHERE_API_KEY\"])\n",
     "result = llm.complete(query)\n",
@@ -210,19 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5710c72d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of source materials: 42\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the pdfs\n",
     "pdf_folder_path = \"./source_documents\"\n",
@@ -248,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1048c42a",
    "metadata": {},
    "outputs": [],
@@ -274,39 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "075ede5c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4061f38daf9c4998a8da03c843d89112",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/42 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8af963ed63a4450899863a5ce82762d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating embeddings:   0%|          | 0/513 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "index = VectorStoreIndex.from_documents(documents, service_context=service_context, show_progress=True)"
    ]
@@ -321,29 +264,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "23499f4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Search query retriever found 2 results\n",
-      "First result example:\n",
-      "Node ID: 52f02f9a-b932-4511-b2cd-d5b973106b16\n",
-      "Text: 26    VECTOR SCHOLARSHIPS IN  AI ATTRACT TOP TALENT TO ONTARIO\n",
-      "UNIVERSITIES  109  Vector Scholarships in AI awarded  34  Programs  13\n",
-      "Universities  351  Scholarships awarded since the  program launched in\n",
-      "2018 Supported with funding from the Province of Ontario, the Vector\n",
-      "Institute Scholarship in Artifcial Intelligence (VSAI) helps Ontario\n",
-      "uni...\n",
-      "Score:  0.666\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "search_query_retriever = index.as_retriever(service_context=service_context)\n",
     "search_query_retrieved_nodes = search_query_retriever.retrieve(query)\n",
@@ -369,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "24dd59e8",
    "metadata": {},
    "outputs": [],
@@ -390,22 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "63696ef9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: As mentioned in the provided context information, in 2022, there were 109 Vector Scholarships in AI awarded. These scholarships are supported by the Province of Ontario and they aim to attract top students to pursue AI-related master's programs at Ontario universities. Since the program's launch in 2018, a total of 351 scholarships have been awarded. \n",
-      "\n",
-      "This information is from the Vector Institute's 2021-22 Annual Report, which is the most recent annual report available in the provided context information, and therefore, the information refers to the year 2022.\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = query_engine.query(query)\n",
     "print(f\"Result: {result}\\n\\n\")"
