--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -155,10 +155,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00061d61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: \n",
+      "\n",
+      " Vector Institute's scholarship programs include various funding opportunities for master's students in the field of AI. In 2022, they have awarded over $10,000 to more than 100 students through their various scholarships. \n",
+      "\n",
+      "Let me provide you with more detailed information on some of these scholarships: \n",
+      "\n",
+      "Vector Scholarship in Artificial Intelligence: This is the flagship scholarship offered by the Vector Institute. It is awarded to exceptional international students pursuing a master's program in Artificial Intelligence at the University of Toronto. The value of this scholarship ranges between $10,000 to $15,000, depending on the applicant's need. \n",
+      "\n",
+      "University of Toronto Fellowship (UTF): The UTF is a merit-based scholarship offered by the University of Toronto for master's students. Exceptional applicants are automatically considered for this scholarship, which covers a portion of the tuition fees. The amount varies depending on the program and whether the applicant is considered a domestic or international student. \n",
+      "\n",
+      "Faststream Digital Master's Scholarship: This scholarship is offered in collaboration with Faststream Recruitment to students enrolled in the Master of Engineering in Artificial Intelligence (MEngAI) program at the University of Toronto. It is awarded based on academic excellence and provides $10,000 funding for students' tuition fees. \n",
+      "\n",
+      "There are other scholarship programs with varying eligibility requirements and award amounts. You can find more information on Vector Institute's website, where they provide comprehensive details on each scholarship program, including eligibility criteria, application processes, and contact information for direct inquiries. \n",
+      "\n",
+      "It's important to note that the award amounts and number of scholarships mentioned in this response are based on the information available as of 2022 and are subject to change over time. \n"
+     ]
+    }
+   ],
    "source": [
     "llm = Cohere(api_key=os.environ[\"COHERE_API_KEY\"])\n",
     "result = llm.complete(query)\n",
