updating use case notebook

--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "ultimate-argument",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "mechanical-arkansas",
    "metadata": {},
    "outputs": [
@@ -65,14 +65,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\u001b[33mWARNING: Skipping llama-index-postprocessor-cohere-rerank as it is not installed.\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip uninstall --quiet llama-index llama-index-core llama-index-llms-cohere llama_index.llms.litellm llama-index-readers-file llama-index-embeddings-cohere -y\n",
-    "%pip install --quiet llama-index llama-index-core llama-index-llms-cohere llama_index.llms.litellm llama-index-readers-file llama-index-embeddings-cohere"
+    "%pip uninstall --quiet llama-index llama-index-core llama-index-llms-cohere llama-index-llms-litellm llama-index-readers-file llama-index-embeddings-cohere llama-index-postprocessor-cohere-rerank -y\n",
+    "%pip install --quiet llama-index llama-index-core llama-index-llms-cohere llama-index-llms-litellm llama-index-readers-file llama-index-embeddings-cohere llama-index-postprocessor-cohere-rerank"
    ]
   },
   {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "educational-brooks",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "acquired-genetics",
    "metadata": {},
    "outputs": [],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "governmental-aurora",
    "metadata": {},
    "outputs": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "better-process",
    "metadata": {},
    "outputs": [],
@@ -171,20 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "specific-particular",
    "metadata": {},
    "outputs": [],
    "source": [
     "# llama_index.llms.cohere does not support command-r model -- Use LiteLLM instead\n",
     "from llama_index.llms.litellm import LiteLLM\n",
-    "llm = LiteLLM(\"command-r\")"
+    "llm = LiteLLM(\n",
+    "    model=\"command-r\",\n",
+    "    temperature=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "perfect-suspect",
+   "execution_count": 35,
+   "id": "public-attendance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cheap-dealer",
+   "execution_count": 36,
+   "id": "contained-greece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,15 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "personalized-wireless",
+   "execution_count": 46,
+   "id": "educated-bench",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_18207/1361995753.py:2: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
+      "/tmp/ipykernel_18207/182692247.py:2: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
       "  service_context = ServiceContext.from_defaults(\n"
      ]
     }
@@ -227,20 +231,20 @@
     "service_context = ServiceContext.from_defaults(\n",
     "    embed_model=embed_model,\n",
     "    llm=llm,\n",
-    "    chunk_size=200\n",
+    "    chunk_size=500\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "committed-popularity",
+   "execution_count": 47,
+   "id": "grand-valuable",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "220d354acf7c40ed819d560c6665a39c",
+       "model_id": "48c0ef1d85d04d8bb7f9829f4f517ca1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,12 +258,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f42a892ff034be7aeee623f2cfb5b67",
+       "model_id": "90b967ccc3f64251b86d1793992f0719",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating embeddings:   0%|          | 0/123 [00:00<?, ?it/s]"
+       "Generating embeddings:   0%|          | 0/20 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -273,11 +277,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "literary-surrey",
+   "execution_count": 48,
+   "id": "alpine-cartridge",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.postprocessor.cohere_rerank import CohereRerank\n",
+    "cohere_rerank = CohereRerank()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "european-ottawa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_engine = truncated_index.as_query_engine(\n",
+    "    node_postprocessors=[cohere_rerank],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "accurate-state",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\n",
+    "    \"\"\"\n",
+    "    What are the sections that constitute the 'table of contents' of the document?\n",
+    "    Create a Python list, where each element of the list is a section from the document's 'table of contents',\n",
+    "    in the order they occur in within the table of contents.\n",
+    "    \n",
+    "    Your output should just be the Python list, nothing else.\n",
+    "    \"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "crucial-entertainment",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['Prospectus Summary', 'Risk Factors', 'Special Note Regarding Forward-Looking Statements', 'Industry Data and User Metrics', 'Use of Proceeds', 'Dividend Policy', 'Capitalization', 'Dilution', 'Selected Consolidated Financial Data', 'Management’ s Discussion and Analysis of Financial Condition and Results of Operations', 'Letter from Mark Zuckerberg', 'Business', 'Management', 'Executive Compensation', 'Related Party Transactions', 'Principal and Selling Stockholders', 'Description of Capital Stock', 'Shares Eligible for Future Sale', 'Material U.S. Federal Tax Considerations for Non-U.S. Holders of Class A Common Stock', 'Underwriting', 'Legal Matters', 'Experts', 'Where You Can Find Additional Information', 'Index to Consolidated Financial Statements']\""
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "banned-serve",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast       # Built-in Abstract Syntax Trees module - Can convert a string contining a list to a list object\n",
+    "document_sections = ast.literal_eval(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "pediatric-federal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Prospectus Summary',\n",
+       " 'Risk Factors',\n",
+       " 'Special Note Regarding Forward-Looking Statements',\n",
+       " 'Industry Data and User Metrics',\n",
+       " 'Use of Proceeds',\n",
+       " 'Dividend Policy',\n",
+       " 'Capitalization',\n",
+       " 'Dilution',\n",
+       " 'Selected Consolidated Financial Data',\n",
+       " 'Management’ s Discussion and Analysis of Financial Condition and Results of Operations',\n",
+       " 'Letter from Mark Zuckerberg',\n",
+       " 'Business',\n",
+       " 'Management',\n",
+       " 'Executive Compensation',\n",
+       " 'Related Party Transactions',\n",
+       " 'Principal and Selling Stockholders',\n",
+       " 'Description of Capital Stock',\n",
+       " 'Shares Eligible for Future Sale',\n",
+       " 'Material U.S. Federal Tax Considerations for Non-U.S. Holders of Class A Common Stock',\n",
+       " 'Underwriting',\n",
+       " 'Legal Matters',\n",
+       " 'Experts',\n",
+       " 'Where You Can Find Additional Information',\n",
+       " 'Index to Consolidated Financial Statements']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document_sections"
+   ]
   },
   {
    "cell_type": "code",
@@ -363,10 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "2f637730",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ServiceContext' from 'llama_index' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mllama_index\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ServiceContext, SimpleDirectoryReader, VectorStoreIndex\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mllama_index\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membeddings\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcohereai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CohereEmbedding\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mllama_index\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mllms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Cohere\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ServiceContext' from 'llama_index' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "from getpass import getpass\n",
     "import os\n",
@@ -388,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "dd4e2417",
    "metadata": {},
    "outputs": [],
