adding utils.py

--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "ultimate-argument",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "mechanical-arkansas",
    "metadata": {},
    "outputs": [
@@ -65,8 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Skipping llama-index-postprocessor-cohere-rerank as it is not installed.\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "educational-brooks",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "acquired-genetics",
    "metadata": {},
    "outputs": [],
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "governmental-aurora",
    "metadata": {},
    "outputs": [
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "better-process",
    "metadata": {},
    "outputs": [],
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "specific-particular",
    "metadata": {},
    "outputs": [],
@@ -187,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "public-attendance",
+   "execution_count": 9,
+   "id": "southwest-inspection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "contained-greece",
+   "execution_count": 10,
+   "id": "together-marker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,15 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "educated-bench",
+   "execution_count": 11,
+   "id": "empty-investigator",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_18207/182692247.py:2: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
+      "/tmp/ipykernel_14770/182692247.py:2: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
       "  service_context = ServiceContext.from_defaults(\n"
      ]
     }
@@ -237,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "grand-valuable",
+   "execution_count": 12,
+   "id": "respiratory-calendar",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48c0ef1d85d04d8bb7f9829f4f517ca1",
+       "model_id": "7d50a030dcc6418c9f098b17abc3b33c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90b967ccc3f64251b86d1793992f0719",
+       "model_id": "eaaf7197691a426cb0817339a784fe10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,8 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "alpine-cartridge",
+   "execution_count": 13,
+   "id": "necessary-harvest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,8 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "european-ottawa",
+   "execution_count": 14,
+   "id": "polish-deposit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "accurate-state",
+   "execution_count": 15,
+   "id": "identified-shannon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,17 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "crucial-entertainment",
+   "execution_count": 16,
+   "id": "together-married",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"['Prospectus Summary', 'Risk Factors', 'Special Note Regarding Forward-Looking Statements', 'Industry Data and User Metrics', 'Use of Proceeds', 'Dividend Policy', 'Capitalization', 'Dilution', 'Selected Consolidated Financial Data', 'Management’ s Discussion and Analysis of Financial Condition and Results of Operations', 'Letter from Mark Zuckerberg', 'Business', 'Management', 'Executive Compensation', 'Related Party Transactions', 'Principal and Selling Stockholders', 'Description of Capital Stock', 'Shares Eligible for Future Sale', 'Material U.S. Federal Tax Considerations for Non-U.S. Holders of Class A Common Stock', 'Underwriting', 'Legal Matters', 'Experts', 'Where You Can Find Additional Information', 'Index to Consolidated Financial Statements']\""
+       "\"['Prospectus Summary', 'Risk Factors', 'Special Note Regarding Forward-Looking Statements', 'Industry Data and User Metrics', 'Use of Proceeds', 'Dividend Policy', 'Capitalization', 'Dilution', 'Selected Consolidated Financial Data', 'Management’ s Discussion and Analysis of Financial Condition and Results of Operations', 'Letter from Mark Zuckerber g', 'Business', 'Management', 'Executive Compensation', 'Related Party Transactions', 'Principal and Selling Stockholders', 'Description of Capital Stock', 'Shares Eligible for Future Sale', 'Material U.S. Federal Tax Considerations for Non-U.S. Holders of Class A Common Stock', 'Underwriting', 'Legal Matters', 'Experts', 'Where You Can Find Additional Information', 'Index to Consolidated Financial Statements']\""
       ]
      },
-     "execution_count": 66,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,19 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "banned-serve",
+   "execution_count": 17,
+   "id": "lesser-mobile",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ast       # Built-in Abstract Syntax Trees module - Can convert a string contining a list to a list object\n",
+    "import ast    # Built-in Abstract Syntax Trees module - Can convert a string contining a list to a list object\n",
     "document_sections = ast.literal_eval(response.response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "pediatric-federal",
+   "execution_count": 18,
+   "id": "frequent-coaching",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +366,7 @@
        " 'Dilution',\n",
        " 'Selected Consolidated Financial Data',\n",
        " 'Management’ s Discussion and Analysis of Financial Condition and Results of Operations',\n",
-       " 'Letter from Mark Zuckerberg',\n",
+       " 'Letter from Mark Zuckerber g',\n",
        " 'Business',\n",
        " 'Management',\n",
        " 'Executive Compensation',\n",
@@ -383,7 +382,7 @@
        " 'Index to Consolidated Financial Statements']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,30 +392,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "smooth-designer",
+   "cell_type": "markdown",
+   "id": "shared-kennedy",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Get the section after 'Risk Factors'"
+    "### Get the Section Body"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "vulnerable-colonial",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "accurate-highland",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target section:\tRisk Factors\n",
+      "Section after:\tSpecial Note Regarding Forward-Looking Statements\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import get_item_after    # helper functions defined in utils.py\n",
+    "\n",
+    "target_section = 'Risk Factors'\n",
+    "next_section = get_item_after(document_sections, target_section)\n",
+    "\n",
+    "print(f\"Target section:\\t{target_section}\\nSection after:\\t{next_section}\") if next_section != None else None"
+   ]
   },
   {
    "cell_type": "code",
@@ -476,22 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "2f637730",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ServiceContext' from 'llama_index' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mllama_index\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ServiceContext, SimpleDirectoryReader, VectorStoreIndex\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mllama_index\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membeddings\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcohereai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CohereEmbedding\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mllama_index\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mllms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Cohere\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ServiceContext' from 'llama_index' (unknown location)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from getpass import getpass\n",
     "import os\n",
@@ -513,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "dd4e2417",
    "metadata": {},
    "outputs": [],
