adding Section Extraction at Scale (Small).ipynb

--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -5,7 +5,7 @@
    "id": "3d86f6cd",
    "metadata": {},
    "source": [
-    "# Section Retrieval On Single Sample Document"
+    "# Section Extraction on a Single Sample Document"
    ]
   },
   {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joint-albania",
+   "id": "distant-italy",
    "metadata": {},
    "source": [
     "### Get the Section Body"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "paperback-arcade",
+   "id": "distinguished-setup",
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "collaborative-directory",
+   "id": "small-rebound",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polyphonic-support",
+   "id": "above-arnold",
    "metadata": {},
    "source": [
     "### Chunk Section Body into Paragraphs and Create Embeddings"
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "positive-police",
+   "id": "north-batch",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interior-hygiene",
+   "id": "rising-healing",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -583,14 +583,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suitable-assistant",
+   "id": "medical-bachelor",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "based-worship",
+   "id": "experimental-uniform",
    "metadata": {},
    "source": [
     "### Perform RAG using the Sentence Body Embeddings"
