--- a/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
+++ b/document_search/document_search_cohere_llamaindex_Section_Extraction_Use_Case.ipynb
@@ -38,7 +38,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "ultimate-argument",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -524,15 +526,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emotional-satin",
+   "id": "italian-angel",
    "metadata": {},
    "source": [
-    "#### The search for substrings is case sensitive. This introcudes challenges in defining the boundaries of the section to extract.\n",
+    "#### The search for substrings is case sensitive. This introduces challenges in defining the boundaries of the section to extract.\n",
     "\n",
     "For example:\n",
     "- Section titles may be formatted differently than the words in the table of contents.\n",
-    "<br>(e.g., Section title is all uppercase while Table of Contents is not -- 'RISK FACTORS' vs 'Risk Factors')\n",
-    "- If all words in the document & substrings to search for are converted to lowercase format to account for formatting differences, the Start String to search for is often detected before the actual section itself. This results in innacurate section extraction. This poses a challenge to accurately extraction sections at scale on documents with differing formats."
+    "  - (e.g., Section title is all uppercase while Table of Contents is not -- 'RISK FACTORS' vs 'Risk Factors')\n",
+    "  - This makes it difficult to maintain section extraction accuracy across documents at scale.\n",
+    "- If all words in the document & substrings to search for are converted to lowercase format, strings with different formats can be matched.\n",
+    "  - However, this increases the frequency that strings are matched incorrectly. i.e., The initial text extraction boundary is often detected before the section begins.\n",
+    "      - (e.g., Text that mentions the name of an upcoming section -- 'See the Risk Factors section on page XX before purchasing shares')\n",
+    "  - Results in inaccurate content extraction.\n",
+    "- In the code below, the extraction boundaries have been converted to uppercase letters to match the format of section titles in the source document.\n",
+    "  - This works for this specific document but is not robust to the formatting differences across documents at scale.\n",
+    "\n",
+    "**Proposed workaround:**\n",
+    "- Use the table of contents to extract the page number of each section along with its title.\n",
+    "- Use the page numbers as extraction boundaries rather than the strings of each section title.\n",
+    "- Get the page number (e.g., from footnote) to create an index for each page.\n",
+    "- Iterate over indexes based on page number boundaries. Extract the pages that include the target section.\n",
+    "- Perform chunking & embedding on the pages directly."
    ]
   },
   {
