--- a/document_search/Section Extraction - 3 Documents.ipynb
+++ b/document_search/Section Extraction - 3 Documents.ipynb
@@ -5,7 +5,7 @@
    "id": "proprietary-ceramic",
    "metadata": {},
    "source": [
-    "# Section Extraction at Scale (Small)"
+    "# Section Extraction on Three Sample Documents"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "fresh-glance",
    "metadata": {},
    "source": [
-    "This notebook builds off of the *Section Extraction on a Single Sample Document* notebook to implement section extraction at scale on a small number (3) of sample documents."
+    "This notebook builds off of the *Section Extraction - 1 Document* notebook to implement section extraction at scale on a small number (3) of sample documents."
    ]
   },
   {
@@ -322,6 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "quick-money",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
