--- a/document_search/Section Extraction - 3 Documents.ipynb
+++ b/document_search/Section Extraction - 3 Documents.ipynb
@@ -13,7 +13,11 @@
    "id": "fresh-glance",
    "metadata": {},
    "source": [
-    "This notebook builds off of the *Section Extraction - 1 Document* notebook to implement section extraction at scale on a small number (3) of sample documents."
+    "This notebook builds off the *Section Extraction - 1 Document* notebook to implement section extraction at scale on a small number (3) of sample documents.\n",
+    "\n",
+    "Use this repo's [Github Codespace](https://codespaces.new/CamDuffy1/rag_bootcamp) to run the notebook with all required dependencies installed.\n",
+    "  - Specifically, the executable <code>[wkhtmltopdf](https://wkhtmltopdf.org/)</code> comes installed in the Github Codespace configuration. This is needed to use convert webpages to PDF documents using the <code>[pdfkit](https://pypi.org/project/pdfkit/)</code> library.\n",
+    "  - These PDF documents can be too large (>25 GB) to store in the Github repo."
    ]
   },
   {
